--- a/styles/main.css
+++ b/styles/main.css
@@ -435,9 +435,10 @@ body .text-scroll {
 }
 
 .color-name {
-  width: 16%;
-  font-family: monospace, "sans-serif";
-  font-size: 25px;
+  width: 18%;
+  font-family: "Google Sans", sans-serif;
+  letter-spacing: 0.3175px;
+  font-size: 24px;
   text-align: center;
   -webkit-box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
           box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
@@ -450,7 +451,7 @@ body .text-scroll {
 @media screen and (max-width: 1024px) {
   .color-name {
     width: 20%;
-    font-size: 25px;
+    font-size: 22px;
   }
   .spcmar {
     margin-top: 70px;
@@ -470,7 +471,7 @@ body .text-scroll {
 @media screen and (max-width: 768px) {
   .color-name {
     width: 20%;
-    font-size: 18px;
+    font-size: 15.5px;
   }
   .spcmar {
     margin-top: 70px;
@@ -482,8 +483,21 @@ body .text-scroll {
     font-size: 12px;
   }
   .color-name {
-    width: 40%;
+    width: 30%;
     font-size: 15px;
+  }
+  .spcmar {
+    margin-top: 50px;
+  }
+}
+
+@media screen and (max-width: 384px) {
+  .item {
+    font-size: 11px;
+  }
+  .color-name {
+    width: 35%;
+    font-size: 12px;
   }
   .spcmar {
     margin-top: 50px;
@@ -515,7 +529,7 @@ body .text-scroll {
 .footer__text > * {
   display: block;
   text-align: center;
-  font-size: 1rem;
+  font-size: 0.8rem;
   padding: 5px 0;
 }
 
