Added typography using fontface

--- a/css/colorpalette.css
+++ b/css/colorpalette.css
@@ -339,7 +339,7 @@
 
 .color-name {
   width: 18%;
-  font-family: "Google Sans", sans-serif;
+  font-family: "GoogleSans-Regular", sans-serif;
   letter-spacing: 0.3175px;
   font-size: 24px;
   text-align: center;
