--- a/css/navbar.css
+++ b/css/navbar.css
@@ -36,7 +36,7 @@
   margin-top: 1.6em;
   margin-left: 42.2%;
   color: #fff;
-  font-family: "Google Sans";
+  font-family: 'GoogleSans-Regular', sans-serif;
   font-size: 1em;
   letter-spacing: 0.3175px;
   word-spacing: 0;
