--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-display: GoogleSans-Regular;
+  src: url(../font/GoogleSans-Regular.ttf);
+}
+
 @import '../css/style.scss';
 @import '../css/navbar.scss';
 @import '../css/colorpalette.scss';
