fixes typography fontface issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-display: GoogleSans-Regular;
+  font-family: GoogleSans-Regular;
   src: url(../font/GoogleSans-Regular.ttf);
 }
 
