Update Header, Footer & some bug fixes related to scrolling

--- a/css/colorpalette.css
+++ b/css/colorpalette.css
@@ -1,13 +1,10 @@
 .cointainer {
   width: 100%;
   background-color: #fff;
-  display: -ms-grid;
   display: grid;
   margin: 5px 0.5px;
-  -ms-grid-rows: (150px)[3];
-      grid-template-rows: repeat(3, 150px);
-  -ms-grid-columns: (20%)[5];
-      grid-template-columns: repeat(5, 20%);
+  grid-template-rows: repeat(3, 150px);
+  grid-template-columns: repeat(5, 20%);
   grid-row-gap: 10px;
 }
 
@@ -16,73 +13,57 @@
   cursor: pointer;
   text-align: center;
   vertical-align: middle;
-  font-size: 14px;
+  font-size: 18px;
   font-family: sans-serif;
   line-height: 155px;
   color: #fff;
-  -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-          box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
 .itemr--1 {
   background-color: #e44236;
 }
-
 .itemr--2 {
   background-color: #b83227;
 }
-
 .itemr--3 {
   background-color: #d63031;
 }
-
 .itemr--4 {
   background-color: #e84342;
 }
-
 .itemr--5 {
   background-color: #ff3031;
 }
-
 .itemr--6 {
   background-color: #ba2f16;
 }
-
 .itemr--7 {
   background-color: #ec4849;
 }
-
 .itemr--8 {
   background-color: #ff3e4d;
 }
-
 .itemr--9 {
   background-color: #e71c23;
 }
-
 .itemr--10 {
   background-color: #ea425c;
 }
-
 .itemr--11 {
   background-color: #e8290b;
 }
-
 .itemr--12 {
   background-color: #ae1438;
 }
-
 .itemr--13 {
   background-color: #e83350;
 }
-
 .itemr--14 {
   background-color: #ff4848;
 }
-
 .itemr--15 {
   background-color: #ff362e;
 }
@@ -90,59 +71,45 @@
 .itemb--1 {
   background-color: #3498db;
 }
-
 .itemb--2 {
   background-color: #2475b0;
 }
-
 .itemb--3 {
   background-color: #74b9ff;
 }
-
 .itemb--4 {
   background-color: #0a79df;
 }
-
 .itemb--5 {
   background-color: #4834df;
 }
-
 .itemb--6 {
   background-color: #30336b;
 }
-
 .itemb--7 {
   background-color: #487eb0;
 }
-
 .itemb--8 {
   background-color: #192a56;
 }
-
 .itemb--9 {
   background-color: #6a89cc;
 }
-
 .itemb--10 {
   background-color: #0a3d62;
 }
-
 .itemb--11 {
   background-color: #4bcffa;
 }
-
 .itemb--12 {
   background-color: #0abde3;
 }
-
 .itemb--13 {
   background-color: #25ccf7;
 }
-
 .itemb--14 {
   background-color: #67e6cd;
 }
-
 .itemb--15 {
   background-color: #3c40c6;
 }
@@ -150,59 +117,45 @@
 .itemg--1 {
   background-color: #2ecc72;
 }
-
 .itemg--2 {
   background-color: #26ae60;
 }
-
 .itemg--3 {
   background-color: #6ab04c;
 }
-
 .itemg--4 {
   background-color: #6ab04a;
 }
-
 .itemg--5 {
   background-color: #badc57;
 }
-
 .itemg--6 {
   background-color: #43be31;
 }
-
 .itemg--7 {
   background-color: #45ce30;
 }
-
 .itemg--8 {
   background-color: #10a881;
 }
-
 .itemg--9 {
   background-color: #1bca98;
 }
-
 .itemg--10 {
   background-color: #7cec9f;
 }
-
 .itemg--11 {
   background-color: #019031;
 }
-
 .itemg--12 {
   background-color: #a3cb37;
 }
-
 .itemg--13 {
   background-color: #75da8b;
 }
-
 .itemg--14 {
   background-color: #53e0bc;
 }
-
 .itemg--15 {
   background-color: #218f76;
 }
@@ -210,59 +163,45 @@
 .itemy--1 {
   background-color: #eec213;
 }
-
 .itemy--2 {
   background-color: #f5c469;
 }
-
 .itemy--3 {
   background-color: #f4c724;
 }
-
 .itemy--4 {
   background-color: #f0dd87;
 }
-
 .itemy--5 {
   background-color: #dfaf2b;
 }
-
 .itemy--6 {
   background-color: #fac42f;
 }
-
 .itemy--7 {
   background-color: #f3b63a;
 }
-
 .itemy--8 {
   background-color: #fbd28b;
 }
-
 .itemy--9 {
   background-color: #f3b431;
 }
-
 .itemy--10 {
   background-color: #fad02e;
 }
-
 .itemy--11 {
   background-color: #e5b143;
 }
-
 .itemy--12 {
   background-color: #f3cc79;
 }
-
 .itemy--13 {
   background-color: #f9dda4;
 }
-
 .itemy--14 {
   background-color: #fff222;
 }
-
 .itemy--15 {
   background-color: #e1da00;
 }
@@ -270,71 +209,54 @@
 .itemgr--1 {
   background-color: #7b8788;
 }
-
 .itemgr--2 {
   background-color: #99aaab;
 }
-
 .itemgr--3 {
   background-color: #2c3335;
 }
-
 .itemgr--4 {
   background-color: #616c6f;
 }
-
 .itemgr--5 {
   background-color: #dae0e2;
 }
-
 .itemgr--6 {
   background-color: #535c68;
 }
-
 .itemgr--7 {
   background-color: #333945;
 }
-
 .itemgr--8 {
   background-color: #2f363f;
 }
-
 .itemgr--9 {
   background-color: #586776;
 }
-
 .itemgr--10 {
   background-color: #8395a7;
 }
-
 .itemgr--11 {
   background-color: #a4b0bd;
 }
-
 .itemgr--12 {
   background-color: #777e8b;
 }
-
 .itemgr--13 {
   background-color: #758aa2;
 }
-
 .itemgr--14 {
   background-color: #47535e;
 }
-
 .itemgr--15 {
   background-color: #4c4b4b;
 }
 
 .item:hover {
-  -webkit-transform: translateY(0px) scale(0.9);
-          transform: translateY(0px) scale(0.9);
+  transform: translateY(0px) scale(0.9);
   z-index: 1;
-  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  -webkit-box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 .color-name {
@@ -343,8 +265,7 @@
   letter-spacing: 0.3175px;
   font-size: 24px;
   text-align: center;
-  -webkit-box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
-          box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
+  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
 }
 
 .spcmar {
@@ -360,7 +281,6 @@
     margin-top: 70px;
   }
 }
-
 @media screen and (max-width: 992px) {
   .color-name {
     width: 20%;
@@ -370,7 +290,6 @@
     margin-top: 70px;
   }
 }
-
 @media screen and (max-width: 768px) {
   .color-name {
     width: 20%;
@@ -380,7 +299,6 @@
     margin-top: 70px;
   }
 }
-
 @media screen and (max-width: 580px) {
   .item {
     font-size: 12px;
@@ -393,7 +311,6 @@
     margin-top: 50px;
   }
 }
-
 @media screen and (max-width: 384px) {
   .item {
     font-size: 11px;
@@ -405,5 +322,4 @@
   .spcmar {
     margin-top: 50px;
   }
-}
-/*# sourceMappingURL=colorpalette.css.map */
+}/*# sourceMappingURL=colorpalette.css.map */
