--- a/css/sidescrollbar.css
+++ b/css/sidescrollbar.css
@@ -12,5 +12,4 @@
 
 ::-webkit-scrollbar {
   display: none;
-}
-/*# sourceMappingURL=sidescrollbar.css.map */
+}/*# sourceMappingURL=sidescrollbar.css.map */
