--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 * {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -9,17 +8,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
   width: 100%;
+  font-size: 1.2rem;
 }
 
-body .text-scroll {
+.text-scroll {
   margin-top: 120px;
   padding: 0 15px;
-  font-size: 20px;
 }
 
 @media screen and (max-width: 580px) {
-  body .text-scroll {
+  .text-scroll {
     margin-top: 75px;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
