--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,7 +4,7 @@
 }
 
 @import '../css/style.scss';
-@import '../css/navbar.scss';
+@import '../css/header.scss';
 @import '../css/colorpalette.scss';
 @import '../css/sidescrollbar.scss';
 @import '../css/footer.scss';
